# luat

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  SECURITY.md
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/luat/: Cargo.toml  build.rs
crates/luat-cli/: Cargo.toml
crates/luat-cli/src/: config.rs  lib.rs  main.rs
crates/luat-cli/src/commands/: build.rs  dev.rs  init.rs  mod.rs  serve.rs  watch.rs
crates/luat-cli/src/extensions/: http.rs  mod.rs
crates/luat-cli/src/kv/: mod.rs  sqlite.rs
crates/luat-cli/src/router/: mod.rs  types.rs
crates/luat-cli/src/server/: body_parser.rs  http.rs  livereload.rs  loader.rs  mod.rs
crates/luat-cli/src/toolchain/: build.rs  download.rs  mod.rs  output.rs  types.rs
crates/luat-cli/src/watcher/: mod.rs
crates/luat-cli/templates/default/: gitignore  luat.toml.tmpl  package.json.tmpl  tsconfig.json
crates/luat-cli/templates/default/assets/css/: app.css
crates/luat-cli/templates/default/assets/js/: app.ts
crates/luat-cli/templates/default/assets/js/modules/: confirm.ts  darkmode.ts  editor.ts  todos.ts
crates/luat-cli/templates/default/assets/js/types/: htmx.d.ts
crates/luat-cli/templates/default/src/: app.html
crates/luat-cli/templates/default/src/lib/: blog.lua  todos.lua  utils.lua
crates/luat-cli/templates/default/src/lib/components/: Button.luat  Card.luat  CheckItem.luat  ConfirmDialog.luat  FeatureCard.luat  Heading.luat  NavItem.luat  PageHeader.luat  TodoItem.luat
crates/luat-cli/templates/default/src/lib/components/editor/: Editor.luat  EditorContainer.luat  EditorToolbar.luat
crates/luat-cli/templates/default/src/routes/: +layout.luat  +layout.server.lua  +page.luat  +page.server.lua
crates/luat-cli/templates/default/src/routes/about/: +page.luat  +page.server.lua
crates/luat-cli/templates/default/src/routes/api/blog/: +server.lua
crates/luat-cli/templates/default/src/routes/api/blog/[slug]/: +server.lua
crates/luat-cli/templates/default/src/routes/api/hello/: +server.lua
crates/luat-cli/templates/default/src/routes/blog/: +page.luat  +page.server.lua
crates/luat-cli/templates/default/src/routes/blog/[slug]/: +page.luat  +page.server.lua
crates/luat-cli/templates/default/src/routes/blog/[slug]/(fragments)/: GET-delete.luat
crates/luat-cli/templates/default/src/routes/blog/[slug]/edit/: +page.luat  +page.server.lua
crates/luat-cli/templates/default/src/routes/blog/[slug]/edit/(fragments)/: default.luat  delete.luat
crates/luat-cli/templates/default/src/routes/blog/new/: +page.luat  +page.server.lua
crates/luat-cli/templates/default/src/routes/blog/new/(fragments)/: default.luat
crates/luat-cli/templates/default/src/routes/todos/: +page.luat  +page.server.lua
crates/luat-cli/templates/default/src/routes/todos/(fragments)/: POST-add.luat  add.luat  all.luat  cancelEdit.luat  clear.luat  delete.luat  edit.luat  editForm.luat  toggle.luat  toggleAll.luat
crates/luat-cli/templates/minimal/: gitignore  luat.toml.tmpl  package.json.tmpl  tsconfig.json
crates/luat-cli/templates/minimal/assets/js/: app.ts
crates/luat-cli/templates/minimal/src/: app.html
crates/luat-cli/templates/minimal/src/routes/: +page.luat  +page.server.lua
crates/luat-cli/tests/: routing_integration.rs
crates/luat-wasm/: Cargo.toml  luat-wasm.mjs  luat.js  luat_wasm.wasm  package.json  test-api.mjs
crates/luat-wasm/src/: main.rs
crates/luat/src/: ast.rs  body.rs  cache.rs  codegen.rs  debug_test.rs  dependencies.rs  engine.rs  engine_ext.rs  enhanced_parser.rs  error.rs  grammar.pest  grammar_debug.rs  lib.rs  lua53.pest  luat_extensions.pest  memory_resolver.rs  parser.rs  request.rs  resolver.rs  response.rs  router.rs  runtime.rs  script_processor.rs  script_string_test.rs  simple_test.rs  sourcemap.rs  test_parsing.rs  tests.rs  transform.rs  wasm.rs  wasm_tests.rs
crates/luat/src/actions/: context.rs  executor.rs  mod.rs  response.rs
crates/luat/src/extensions/: json.rs  lua.rs  mod.rs
crates/luat/src/kv/: memory.rs  mod.rs  register.rs  types.rs
docs/: architecture.md
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/routing/: .gitignore  README.md  luat.toml
examples/routing/assets/css/: app.scss
examples/routing/public/css/: tailwind.css
examples/routing/src/: app.html
examples/routing/src/lib/: utils.lua
examples/routing/src/routes/: +layout.luat  +page.luat  +page.server.lua
examples/routing/src/routes/about/: +page.luat
examples/routing/src/routes/api/hello/: +server.lua
examples/routing/src/routes/blog/: +page.luat  +page.server.lua
examples/routing/src/routes/blog/[slug]/: +page.luat  +page.server.lua
npm/: README.md  install.js  package.json  run.js
scripts/: install.sh  setup-dev.sh
